Fix scrollbars on Windows

--- a/assets/scss/index.scss
+++ b/assets/scss/index.scss
@@ -31,6 +31,10 @@ body {
   margin: 0;
 }
 
+#_next *::-webkit-scrollbar {
+  display: none;
+}
+
 hr {
   border: none;
   border-bottom: solid 1px grey;
@@ -81,7 +85,7 @@ hr {
 
   .frame {
     border: dotted black 2px;
-    border-radius: .5rem;
+    border-radius: 0.5rem;
     padding: 1rem;
     margin: 1rem 0;
 
